# QuintAI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  alembic.ini  compose.yaml  environment.yml  main.py  pyproject.toml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260723_0001_initial_schema.py
backend/src/docnexus/: __init__.py  main.py
backend/src/docnexus/ai/: contracts.py  document_operations.py  information_extraction.py  llm.py  table_filling.py  workflows.py
backend/src/docnexus/ai/knowledge_graph/: README.md
backend/src/docnexus/ai/table_engine/: agents.py  analyzers.py  app.py  cli.py  compute.py  config.py  evaluation.py  extractors.py  parsers.py  planners.py  quality.py  rag.py  registry.py  retrievers.py  verifiers.py  writers.py
backend/src/docnexus/ai/table_engine/candidates/: __init__.py  builders.py  models.py
backend/src/docnexus/ai/table_engine/core/: models.py  (+3 more)
backend/src/docnexus/api/: __init__.py  dependencies.py  router.py
backend/src/docnexus/api/routes/: __init__.py  admin.py  auth.py  documents.py  extractions.py  system.py  tables.py  tasks.py
backend/src/docnexus/core/: observability.py  rate_limit.py  security.py  settings.py
backend/src/docnexus/db/: __init__.py  bootstrap.py  migrations.py  models.py  session.py
backend/src/docnexus/repositories/: __init__.py  extractions.py  tasks.py
backend/src/docnexus/schemas/: __init__.py  auth.py
backend/src/docnexus/services/: __init__.py  document_parser.py  llm_extractor.py  table_filler.py  upload_security.py
backend/src/docnexus/worker/: __init__.py  celery_app.py  tasks.py
backend/tests/: test_backend_config.py  test_candidate_merger.py  test_complex_task_planning.py  test_compute_verifier.py  test_data_quality.py  test_docnexus_ai_modules.py  test_engine.py  test_golden_evaluation.py  test_hybrid_rag.py  test_knowledge_graph.py  test_llm_client_runtime.py  test_routes.py  test_row_resolution.py  test_security_and_tasks.py  test_table_filling_enhancements.py  test_task_plan_v2.py  test_writers.py
backend/tests/acceptance/: test_real_llm_api_acceptance.py  test_real_llm_stress_matrix.py
backend/tests/fixtures/evaluation/: complex_tasks.json
(+122 files in other folders)
