[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docnexus-backend"
version = "1.0.0"
description = "QuintAI 文档智能处理后端"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.135,<1",
  "langchain-core>=1.4,<2",
  "langchain-openai>=1.2,<2",
  "langgraph>=1.0,<2",
  "openai>=2.38,<3",
  "openpyxl>=3.1,<4",
  "pandas>=3.0,<4",
  "passlib[bcrypt]>=1.7,<2",
  "pydantic[email]>=2.12,<3",
  "python-docx>=1.2,<2",
  "python-dotenv>=1.2,<2",
  "python-jose[cryptography]>=3.5,<4",
  "python-multipart>=0.0.22,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.41,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6,<7",
  "pytest-timeout>=2.4,<3",
  "ruff>=0.9,<1",
]

[project.scripts]
any2table = "docnexus.ai.table_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"docnexus.ai.table_engine.skills" = ["definitions/*/SKILL.md"]
